--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.2
 annotated-types==0.7.0
 anyio==4.4.0
 attrs==24.2.0
@@ -15,6 +16,7 @@ idna==3.8
 Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
@@ -27,6 +29,7 @@ PyYAML==6.0.2
 referencing==0.35.1
 rich==13.8.0
 rpds-py==0.20.0
+setuptools==74.1.2
 shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.34
