--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,6 @@ starlette==0.38.5
 typer==0.12.5
 typing_extensions==4.12.2
 uvicorn==0.30.6
-uvloop==0.20.0
 watchfiles==0.24.0
 websockets==13.0.1
+bcrypt==4.2.0
