--- a/requirements.txt
+++ b/requirements.txt
@@ -42,3 +42,7 @@ watchfiles==0.24.0
 websockets==13.0.1
 bcrypt==4.2.0
 PyJWT==2.9.0
+iniconfig==2.0.0 
+packaging==24.1
+pluggy==1.5.0
+pytest==8.3.3
