--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ alembic==1.13.2
 annotated-types==0.7.0
 anyio==4.4.0
 attrs==24.2.0
+aiohttp==3.11.8
+beautifulsoup4==4.12.3
 certifi==2024.8.30
 click==8.1.7
 dnspython==2.6.1
@@ -46,3 +48,4 @@ iniconfig==2.0.0
 packaging==24.1
 pluggy==1.5.0
 pytest==8.3.3
+psycopg2==2.9.10
