--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ certifi==2024.8.30
 click==8.1.7
 dnspython==2.6.1
 email_validator==2.2.0
-fastapi==0.113.0
+fastapi[standard]==0.113.0
 fastapi-cli==0.0.5
 h11==0.14.0
 httpcore==1.0.5
